agent-core/crates/eos-sandbox-api/tests/snapshots/schema_snapshot__tool_call_request.snap
---
source: crates/eos-sandbox-api/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "Intent": {
      "description": "High-level execution intent for a foreground sandbox tool call.",
      "oneOf": [
        {
          "description": "Read-only operation (no mutations).",
          "enum": [
            "read_only"
          ],
          "type": "string"
        },
        {
          "description": "Operation permitted to mutate the workspace.",
          "enum": [
            "write_allowed"
          ],
          "type": "string"
        },
        {
          "description": "Workspace lifecycle operation (e.g. isolated enter/exit).",
          "enum": [
            "lifecycle"
          ],
          "type": "string"
        }
      ]
    }
  },
  "description": "One tool invocation routed through a workspace pipeline.\n\n`invocation_id` is the typed [`InvocationId`]; [`Self::from_payload`] parses it at the boundary and is fallible (a spec-sanctioned tightening of the Python path, which tolerated an empty id string).",
  "properties": {
    "agent_id": {
      "description": "Calling agent id.",
      "type": "string"
    },
    "args": {
      "additionalProperties": true,
      "description": "Untyped tool arguments.",
      "type": "object"
    },
    "background": {
      "default": false,
      "description": "Whether the invocation runs in the background.",
      "type": "boolean"
    },
    "intent": {
      "allOf": [
        {
          "$ref": "#/definitions/Intent"
        }
      ],
      "description": "Execution intent."
    },
    "invocation_id": {
      "description": "Correlation id for this invocation.",
      "type": "string"
    },
    "verb": {
      "description": "Tool verb (e.g. `read_file`).",
      "type": "string"
    }
  },
  "required": [
    "agent_id",
    "args",
    "intent",
    "invocation_id",
    "verb"
  ],
  "title": "ToolCallRequest",
  "type": "object"
}
