agent-core/crates/eos-sandbox-api/tests/snapshots/schema_snapshot__write_file_request.snap
---
source: crates/eos-sandbox-api/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SandboxCaller": {
      "description": "Caller identity threaded onto every audit-aware request.\n\nThe four required ids (`agent_id`, `run_id`, `agent_run_id`, `task_id`) are always present even when empty; the rest are optional. `tool_id` is the only id stored already-typed (it is `Option`, omitted when unset). The Python `tool_name` field is removed (GC-sandbox-api-01): it was empty in production and the audit fallback uses the operation name.",
      "properties": {
        "agent_id": {
          "description": "Resolved agent identity. In production it is derived from `agent_run_id` (`agent_run_id.strip() or agent_name`, eos-tools source), so it frequently equals `agent_run_id` while staying a distinct field. eos-types owns no `AgentId` newtype, so this stays a raw `String`.",
          "type": "string"
        },
        "agent_run_id": {
          "default": "",
          "description": "Agent-run id as a raw wire field (required-empty). Use [`Self::agent_run`] for the validated typed form.",
          "type": "string"
        },
        "attempt_id": {
          "default": "",
          "description": "Attempt id as a raw wire field (optional-empty). Use [`Self::attempt`].",
          "type": "string"
        },
        "request_id": {
          "default": "",
          "description": "Request id as a raw wire field (optional-empty). Use [`Self::request`].",
          "type": "string"
        },
        "run_id": {
          "default": "",
          "description": "Run id (required-empty compatibility field).",
          "type": "string"
        },
        "task_id": {
          "default": "",
          "description": "Task id as a raw wire field (required-empty). Use [`Self::task`].",
          "type": "string"
        },
        "tool_id": {
          "description": "Tool-use id, stored already-typed; omitted from the wire when unset.",
          "type": [
            "string",
            "null"
          ]
        },
        "workflow_id": {
          "default": "",
          "description": "Workflow id as a raw wire field (optional-empty). Use [`Self::workflow`].",
          "type": "string"
        }
      },
      "required": [
        "agent_id"
      ],
      "type": "object"
    }
  },
  "description": "Write one UTF-8 file through OCC.",
  "properties": {
    "caller": {
      "allOf": [
        {
          "$ref": "#/definitions/SandboxCaller"
        }
      ],
      "description": "Caller identity for audit and routing."
    },
    "content": {
      "description": "New file contents.",
      "type": "string"
    },
    "description": {
      "default": "",
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "type": "string"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    },
    "overwrite": {
      "default": true,
      "description": "Whether to overwrite an existing file (defaults to `true`).",
      "type": "boolean"
    },
    "path": {
      "description": "Workspace-relative file path to write.",
      "type": "string"
    }
  },
  "required": [
    "caller",
    "content",
    "path"
  ],
  "title": "WriteFileRequest",
  "type": "object"
}
